[package]
name = "kraken-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
rust_decimal = {version = "1.33", features = ["maths", "serde-float"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = "0.1"
url = "2.3.1"
csv = "1.3.0"
futures-channel = "0.3.28"
tracing-subscriber = "0.3"
hmac = { version = "0.12", features = ["std"] }
base64 = "0.21"
sha2 = { version = "0.10", features = ["std"] }
serde_url_params = "0.2.1"
toml = "0.8.10"
insta = { version = "1.34", features = ["json"] }
